更新文字显示

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,12 @@
     <string name="app_name">IXDReader</string>
     <string name="read_mode_set">阅读模式设置</string>
     <string name="read_color_set">阅读背景设置</string>
-    <string name="book_list">IXDReader</string>
+    <string name="book_list">努力阅读上进</string>
     <string name="delete_book">是否删除</string>
     <string name="sure_delete">确定删除</string>
     <string name="cancel_delete">取消删除</string>
     <string name="mode_set_ok">OK</string>
     <string name="mode_set_title">请设定背诵时的空格个数</string>
     <string name="set_mode_number"></string>
-    <string name="add_book">查找书籍</string>
+    <string name="add_book">点击添加书籍</string>
 </resources>
